Fix server page cards spacing

--- a/src/components/ServerDetailsPage.scss
+++ b/src/components/ServerDetailsPage.scss
@@ -61,7 +61,13 @@
   display: flex;
   flex-flow: row wrap;
 
+  @media screen and (max-width: $breakpoint-mobile){
+    padding: 0;
+  }
+
   & > div{
+    margin: 0 12px;
+    margin-bottom: 22px;
     padding: 16px 26px;
     background-color: var(--bg-lighter);
     flex: 1 350px;
@@ -69,16 +75,7 @@
     border-radius: $border-radius;
 
     @media screen and (max-width: $breakpoint-mobile){
-      margin-bottom: 22px;
       padding: 12px 16px;
-    }
-
-    @media screen and (min-width: $breakpoint-mobile){
-      margin-right: 32px;
-
-      &:last-child{
-        margin-right: 0;
-      }
     }
   }
 }
